--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>房金所-国内首家互联网房地产金融服务平台，专业安全有保障</title>
    <script type="text/javascript" src="rem.js"></script>
+   
     <style>
     body, ul, li, ol, dl, dt, dd, h1, h2, h3, h4, h5, h6, a, img, input, figure, figcaption, p {
   padding: 0;
@@ -56,6 +57,8 @@
   </head>
   <body>
     <div id="box"></div>
+    <script type="text/javascript" src="/src/Component/Home/canvas.js"></script>
     <script src="/dist/index.bundle.js"></script>
+
   </body>
 </html>
